# simd_iter

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
benches/: bench.rs
src/: integer.rs  lib.rs  num.rs  ord.rs  reductions.rs  scalar.rs  vector.rs
