[package]
name = "simd_iter"
version = "0.2.0"
authors = ["Chris Jones <chris.jones@cantab.net>"]
description = "A simple library for iterating over slices as `Simd` vectors."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chr1sj0nes/simd_iter"
documentation = "https://docs.rs/simd_iter/"
readme = "README.md"
keywords = ["simd"]
categories = ["no-std", "hardware-support"]

[dependencies]
num-traits = "0.2"

[dev-dependencies]
approx = "0.5.0"
criterion = "0.4.0"
proptest = "1.0.0"
rand = "0.8.4"

[[bench]]
name = "bench"
harness = false
